# ainbox-manager

./: .gitignore  pyproject.toml
ainbox_manager/: backends.py  discovery.py  main.py  node.py
ainbox_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ainbox_manager/templates/: dashboard.html  peers_fragment.html
docs/superpowers/specs/: 2026-06-30-ainbox-engine-design.md  2026-07-01-ainbox-engine-reconciliation.md
